# watchdog-host

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Note.md
src/watchdog_host/: __init__.py  bandwidth.py  cli.py  config.yaml  notifier.py  smartmon.py
src/watchdog_host/systemd/: watchdog-bandwidth.service  watchdog-smartmon.service
